semantico/semantico.output
Estado 109 conflictos: 1 desplazamiento/reducción
Estado 148 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: PRINCIPAL bloque

    2 $@1: %empty

    3 $@2: %empty

    4 bloque: INICIOBLOQUE $@1 declar_variables_locales declar_subprogs $@2 sentencias FINBLOQUE

    5 declar_subprogs: declar_subprogs declar_subprog
    6                | %empty

    7 $@3: %empty

    8 declar_subprog: cabecera_subprograma $@3 bloque

    9 $@4: %empty

   10 declar_variables_locales: VAR $@4 variables_locales FINVAR
   11                         | %empty

   12 variables_locales: variables_locales cuerpo_declar_variables
   13                  | cuerpo_declar_variables

   14 $@5: %empty

   15 cuerpo_declar_variables: TIPOBASICO $@5 lista_variables PUNTOYCOMA
   16                        | error

   17 lista_variables: variable COMA lista_variables
   18                | variable error lista_variables
   19                | variable

   20 variable: IDENT declar_matriz
   21         | IDENT

   22 declar_matriz: CORIZQ CONSTENTERA CORDER
   23              | CORIZQ CONSTENTERA COMA CONSTENTERA CORDER

   24 $@6: %empty

   25 cabecera_subprograma: tipo_retorno IDENT $@6 PARIZQ lista_parametros PARDER

   26 tipo_retorno: TIPOBASICO declar_matriz
   27             | TIPOBASICO

   28 lista_parametros: parametro COMA lista_parametros
   29                 | parametro error COMA lista_parametros
   30                 | parametro

   31 parametro: TIPOBASICO IDENT declar_matriz
   32          | TIPOBASICO IDENT

   33 sentencias: sentencia sentencias
   34           | %empty

   35 sentencia: bloque
   36          | asignacion PUNTOYCOMA
   37          | si
   38          | mientras
   39          | entrada PUNTOYCOMA
   40          | salida PUNTOYCOMA
   41          | devolver PUNTOYCOMA
   42          | repetir_hasta PUNTOYCOMA

   43 asignacion: variable ASIGNACION expresion

   44 si: SI PARIZQ expresion PARDER sentencia SINO sentencia
   45   | SI PARIZQ expresion PARDER sentencia

   46 mientras: MIENTRAS PARIZQ expresion PARDER sentencia

   47 entrada: LEER lista_variables

   48 salida: ESCRIBIR lista_expresiones_cad

   49 devolver: DEVOLVER expresion

   50 repetir_hasta: REPETIR sentencia HASTA PARIZQ expresion PARDER

   51 expresion: PARIZQ expresion PARDER
   52          | OPUNARIO expresion
   53          | SUMRES expresion
   54          | expresion OPBINARIO expresion
   55          | expresion OPOR expresion
   56          | expresion OPRELACIONAL expresion
   57          | expresion SUMRES expresion
   58          | expresion OPAND expresion
   59          | variable
   60          | constante
   61          | llamada_funcion
   62          | error

   63 lista_expresiones: expresion COMA lista_expresiones
   64                  | expresion
   65                  | %empty

   66 lista_expresiones_cad: exp_cad COMA lista_expresiones_cad
   67                      | exp_cad

   68 exp_cad: expresion
   69        | CONSTCADENA

   70 constante: CONSTENTERA
   71          | constante_matriz
   72          | CONSTLOGICA
   73          | CONSTREAL
   74          | CONSTCARACTER

   75 llamada_funcion: IDENT PARIZQ lista_expresiones PARDER
   76                | IDENT PARIZQ PARDER

   77 constante_matriz: INICIOBLOQUE auxiliar_matriz FINBLOQUE

   78 auxiliar_matriz: agregado_entero
   79                | agregado_real
   80                | agregado_logico
   81                | agregado_caracter

   82 agregado_entero: fila_agregado_entero

   83 fila_agregado_entero: fila_agregado_entero PUNTOYCOMA lista_entera
   84                     | lista_entera

   85 lista_entera: lista_entera COMA CONSTENTERA
   86             | CONSTENTERA

   87 agregado_real: fila_agregado_real

   88 fila_agregado_real: fila_agregado_real PUNTOYCOMA lista_real
   89                   | lista_real

   90 lista_real: lista_real COMA CONSTREAL
   91           | CONSTREAL

   92 agregado_logico: fila_agregado_logico

   93 fila_agregado_logico: fila_agregado_logico PUNTOYCOMA lista_logica
   94                     | lista_logica

   95 lista_logica: lista_logica COMA CONSTLOGICA
   96             | CONSTLOGICA

   97 agregado_caracter: fila_agregado_caracter

   98 fila_agregado_caracter: fila_agregado_caracter PUNTOYCOMA lista_caracter
   99                       | lista_caracter

  100 lista_caracter: lista_caracter COMA CONSTCARACTER
  101               | CONSTCARACTER


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 16 18 29 62
OPOR (258) 55
OPAND (259) 58
OPRELACIONAL (260) 56
SUMRES (261) 53 57
OPBINARIO (262) 54
OPUNARIO (263) 52
ASIGNACION (264) 43
CORIZQ (265) 22 23
CORDER (266) 22 23
TIPOBASICO (267) 15 26 27 31 32
CONSTENTERA (268) 22 23 70 85 86
CONSTLOGICA (269) 72 95 96
CONSTREAL (270) 73 90 91
CONSTCARACTER (271) 74 100 101
CONSTCADENA (272) 69
COMA (273) 17 23 28 29 63 66 85 90 95 100
PARDER (274) 25 44 45 46 50 51 75 76
PARIZQ (275) 25 44 45 46 50 51 75 76
PUNTOYCOMA (276) 15 36 39 40 41 42 83 88 93 98
INICIOBLOQUE (277) 4 77
FINBLOQUE (278) 4 77
VAR (279) 10
FINVAR (280) 10
SI (281) 44 45
SINO (282) 44
MIENTRAS (283) 46
LEER (284) 47
ESCRIBIR (285) 48
DEVOLVER (286) 49
REPETIR (287) 50
HASTA (288) 50
PRINCIPAL (289) 1
IDENT (290) 20 21 25 31 32 75 76


No terminales con las reglas donde aparecen

$accept (36)
    en la izquierda: 0
programa (37)
    en la izquierda: 1, en la derecha: 0
bloque (38)
    en la izquierda: 4, en la derecha: 1 8 35
$@1 (39)
    en la izquierda: 2, en la derecha: 4
$@2 (40)
    en la izquierda: 3, en la derecha: 4
declar_subprogs (41)
    en la izquierda: 5 6, en la derecha: 4 5
declar_subprog (42)
    en la izquierda: 8, en la derecha: 5
$@3 (43)
    en la izquierda: 7, en la derecha: 8
declar_variables_locales (44)
    en la izquierda: 10 11, en la derecha: 4
$@4 (45)
    en la izquierda: 9, en la derecha: 10
variables_locales (46)
    en la izquierda: 12 13, en la derecha: 10 12
cuerpo_declar_variables (47)
    en la izquierda: 15 16, en la derecha: 12 13
$@5 (48)
    en la izquierda: 14, en la derecha: 15
lista_variables (49)
    en la izquierda: 17 18 19, en la derecha: 15 17 18 47
variable (50)
    en la izquierda: 20 21, en la derecha: 17 18 19 43 59
declar_matriz (51)
    en la izquierda: 22 23, en la derecha: 20 26 31
cabecera_subprograma (52)
    en la izquierda: 25, en la derecha: 8
$@6 (53)
    en la izquierda: 24, en la derecha: 25
tipo_retorno (54)
    en la izquierda: 26 27, en la derecha: 25
lista_parametros (55)
    en la izquierda: 28 29 30, en la derecha: 25 28 29
parametro (56)
    en la izquierda: 31 32, en la derecha: 28 29 30
sentencias (57)
    en la izquierda: 33 34, en la derecha: 4 33
sentencia (58)
    en la izquierda: 35 36 37 38 39 40 41 42, en la derecha: 33 44
    45 46 50
asignacion (59)
    en la izquierda: 43, en la derecha: 36
si (60)
    en la izquierda: 44 45, en la derecha: 37
mientras (61)
    en la izquierda: 46, en la derecha: 38
entrada (62)
    en la izquierda: 47, en la derecha: 39
salida (63)
    en la izquierda: 48, en la derecha: 40
devolver (64)
    en la izquierda: 49, en la derecha: 41
repetir_hasta (65)
    en la izquierda: 50, en la derecha: 42
expresion (66)
    en la izquierda: 51 52 53 54 55 56 57 58 59 60 61 62, en la derecha:
    43 44 45 46 49 50 51 52 53 54 55 56 57 58 63 64 68
lista_expresiones (67)
    en la izquierda: 63 64 65, en la derecha: 63 75
lista_expresiones_cad (68)
    en la izquierda: 66 67, en la derecha: 48 66
exp_cad (69)
    en la izquierda: 68 69, en la derecha: 66 67
constante (70)
    en la izquierda: 70 71 72 73 74, en la derecha: 60
llamada_funcion (71)
    en la izquierda: 75 76, en la derecha: 61
constante_matriz (72)
    en la izquierda: 77, en la derecha: 71
auxiliar_matriz (73)
    en la izquierda: 78 79 80 81, en la derecha: 77
agregado_entero (74)
    en la izquierda: 82, en la derecha: 78
fila_agregado_entero (75)
    en la izquierda: 83 84, en la derecha: 82 83
lista_entera (76)
    en la izquierda: 85 86, en la derecha: 83 84 85
agregado_real (77)
    en la izquierda: 87, en la derecha: 79
fila_agregado_real (78)
    en la izquierda: 88 89, en la derecha: 87 88
lista_real (79)
    en la izquierda: 90 91, en la derecha: 88 89 90
agregado_logico (80)
    en la izquierda: 92, en la derecha: 80
fila_agregado_logico (81)
    en la izquierda: 93 94, en la derecha: 92 93
lista_logica (82)
    en la izquierda: 95 96, en la derecha: 93 94 95
agregado_caracter (83)
    en la izquierda: 97, en la derecha: 81
fila_agregado_caracter (84)
    en la izquierda: 98 99, en la derecha: 97 98
lista_caracter (85)
    en la izquierda: 100 101, en la derecha: 98 99 100


Estado 0

    0 $accept: . programa $end

    PRINCIPAL  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: PRINCIPAL . bloque

    INICIOBLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 4


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    4 bloque: INICIOBLOQUE . $@1 declar_variables_locales declar_subprogs $@2 sentencias FINBLOQUE

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 6


Estado 4

    1 programa: PRINCIPAL bloque .

    $default  reduce usando la regla 1 (programa)


Estado 5

    0 $accept: programa $end .

    $default  aceptar


Estado 6

    4 bloque: INICIOBLOQUE $@1 . declar_variables_locales declar_subprogs $@2 sentencias FINBLOQUE

    VAR  desplazar e ir al estado 7

    $default  reduce usando la regla 11 (declar_variables_locales)

    declar_variables_locales  ir al estado 8


Estado 7

   10 declar_variables_locales: VAR . $@4 variables_locales FINVAR

    $default  reduce usando la regla 9 ($@4)

    $@4  ir al estado 9


Estado 8

    4 bloque: INICIOBLOQUE $@1 declar_variables_locales . declar_subprogs $@2 sentencias FINBLOQUE

    $default  reduce usando la regla 6 (declar_subprogs)

    declar_subprogs  ir al estado 10


Estado 9

   10 declar_variables_locales: VAR $@4 . variables_locales FINVAR

    error       desplazar e ir al estado 11
    TIPOBASICO  desplazar e ir al estado 12

    variables_locales        ir al estado 13
    cuerpo_declar_variables  ir al estado 14


Estado 10

    4 bloque: INICIOBLOQUE $@1 declar_variables_locales declar_subprogs . $@2 sentencias FINBLOQUE
    5 declar_subprogs: declar_subprogs . declar_subprog

    TIPOBASICO  desplazar e ir al estado 15

    $default  reduce usando la regla 3 ($@2)

    $@2                   ir al estado 16
    declar_subprog        ir al estado 17
    cabecera_subprograma  ir al estado 18
    tipo_retorno          ir al estado 19


Estado 11

   16 cuerpo_declar_variables: error .

    $default  reduce usando la regla 16 (cuerpo_declar_variables)


Estado 12

   15 cuerpo_declar_variables: TIPOBASICO . $@5 lista_variables PUNTOYCOMA

    $default  reduce usando la regla 14 ($@5)

    $@5  ir al estado 20


Estado 13

   10 declar_variables_locales: VAR $@4 variables_locales . FINVAR
   12 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 11
    TIPOBASICO  desplazar e ir al estado 12
    FINVAR      desplazar e ir al estado 21

    cuerpo_declar_variables  ir al estado 22


Estado 14

   13 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 13 (variables_locales)


Estado 15

   26 tipo_retorno: TIPOBASICO . declar_matriz
   27             | TIPOBASICO .

    CORIZQ  desplazar e ir al estado 23

    $default  reduce usando la regla 27 (tipo_retorno)

    declar_matriz  ir al estado 24


Estado 16

    4 bloque: INICIOBLOQUE $@1 declar_variables_locales declar_subprogs $@2 . sentencias FINBLOQUE

    INICIOBLOQUE  desplazar e ir al estado 3
    SI            desplazar e ir al estado 25
    MIENTRAS      desplazar e ir al estado 26
    LEER          desplazar e ir al estado 27
    ESCRIBIR      desplazar e ir al estado 28
    DEVOLVER      desplazar e ir al estado 29
    REPETIR       desplazar e ir al estado 30
    IDENT         desplazar e ir al estado 31

    $default  reduce usando la regla 34 (sentencias)

    bloque         ir al estado 32
    variable       ir al estado 33
    sentencias     ir al estado 34
    sentencia      ir al estado 35
    asignacion     ir al estado 36
    si             ir al estado 37
    mientras       ir al estado 38
    entrada        ir al estado 39
    salida         ir al estado 40
    devolver       ir al estado 41
    repetir_hasta  ir al estado 42


Estado 17

    5 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce usando la regla 5 (declar_subprogs)


Estado 18

    8 declar_subprog: cabecera_subprograma . $@3 bloque

    $default  reduce usando la regla 7 ($@3)

    $@3  ir al estado 43


Estado 19

   25 cabecera_subprograma: tipo_retorno . IDENT $@6 PARIZQ lista_parametros PARDER

    IDENT  desplazar e ir al estado 44


Estado 20

   15 cuerpo_declar_variables: TIPOBASICO $@5 . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 31

    lista_variables  ir al estado 45
    variable         ir al estado 46


Estado 21

   10 declar_variables_locales: VAR $@4 variables_locales FINVAR .

    $default  reduce usando la regla 10 (declar_variables_locales)


Estado 22

   12 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 12 (variables_locales)


Estado 23

   22 declar_matriz: CORIZQ . CONSTENTERA CORDER
   23              | CORIZQ . CONSTENTERA COMA CONSTENTERA CORDER

    CONSTENTERA  desplazar e ir al estado 47


Estado 24

   26 tipo_retorno: TIPOBASICO declar_matriz .

    $default  reduce usando la regla 26 (tipo_retorno)


Estado 25

   44 si: SI . PARIZQ expresion PARDER sentencia SINO sentencia
   45   | SI . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 48


Estado 26

   46 mientras: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 49


Estado 27

   47 entrada: LEER . lista_variables

    IDENT  desplazar e ir al estado 31

    lista_variables  ir al estado 50
    variable         ir al estado 46


Estado 28

   48 salida: ESCRIBIR . lista_expresiones_cad

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    CONSTCADENA    desplazar e ir al estado 58
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable               ir al estado 62
    expresion              ir al estado 63
    lista_expresiones_cad  ir al estado 64
    exp_cad                ir al estado 65
    constante              ir al estado 66
    llamada_funcion        ir al estado 67
    constante_matriz       ir al estado 68


Estado 29

   49 devolver: DEVOLVER . expresion

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 69
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 30

   50 repetir_hasta: REPETIR . sentencia HASTA PARIZQ expresion PARDER

    INICIOBLOQUE  desplazar e ir al estado 3
    SI            desplazar e ir al estado 25
    MIENTRAS      desplazar e ir al estado 26
    LEER          desplazar e ir al estado 27
    ESCRIBIR      desplazar e ir al estado 28
    DEVOLVER      desplazar e ir al estado 29
    REPETIR       desplazar e ir al estado 30
    IDENT         desplazar e ir al estado 31

    bloque         ir al estado 32
    variable       ir al estado 33
    sentencia      ir al estado 70
    asignacion     ir al estado 36
    si             ir al estado 37
    mientras       ir al estado 38
    entrada        ir al estado 39
    salida         ir al estado 40
    devolver       ir al estado 41
    repetir_hasta  ir al estado 42


Estado 31

   20 variable: IDENT . declar_matriz
   21         | IDENT .

    CORIZQ  desplazar e ir al estado 23

    $default  reduce usando la regla 21 (variable)

    declar_matriz  ir al estado 71


Estado 32

   35 sentencia: bloque .

    $default  reduce usando la regla 35 (sentencia)


Estado 33

   43 asignacion: variable . ASIGNACION expresion

    ASIGNACION  desplazar e ir al estado 72


Estado 34

    4 bloque: INICIOBLOQUE $@1 declar_variables_locales declar_subprogs $@2 sentencias . FINBLOQUE

    FINBLOQUE  desplazar e ir al estado 73


Estado 35

   33 sentencias: sentencia . sentencias

    INICIOBLOQUE  desplazar e ir al estado 3
    SI            desplazar e ir al estado 25
    MIENTRAS      desplazar e ir al estado 26
    LEER          desplazar e ir al estado 27
    ESCRIBIR      desplazar e ir al estado 28
    DEVOLVER      desplazar e ir al estado 29
    REPETIR       desplazar e ir al estado 30
    IDENT         desplazar e ir al estado 31

    $default  reduce usando la regla 34 (sentencias)

    bloque         ir al estado 32
    variable       ir al estado 33
    sentencias     ir al estado 74
    sentencia      ir al estado 35
    asignacion     ir al estado 36
    si             ir al estado 37
    mientras       ir al estado 38
    entrada        ir al estado 39
    salida         ir al estado 40
    devolver       ir al estado 41
    repetir_hasta  ir al estado 42


Estado 36

   36 sentencia: asignacion . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 75


Estado 37

   37 sentencia: si .

    $default  reduce usando la regla 37 (sentencia)


Estado 38

   38 sentencia: mientras .

    $default  reduce usando la regla 38 (sentencia)


Estado 39

   39 sentencia: entrada . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 76


Estado 40

   40 sentencia: salida . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 77


Estado 41

   41 sentencia: devolver . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 78


Estado 42

   42 sentencia: repetir_hasta . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 79


Estado 43

    8 declar_subprog: cabecera_subprograma $@3 . bloque

    INICIOBLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 80


Estado 44

   25 cabecera_subprograma: tipo_retorno IDENT . $@6 PARIZQ lista_parametros PARDER

    $default  reduce usando la regla 24 ($@6)

    $@6  ir al estado 81


Estado 45

   15 cuerpo_declar_variables: TIPOBASICO $@5 lista_variables . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 82


Estado 46

   17 lista_variables: variable . COMA lista_variables
   18                | variable . error lista_variables
   19                | variable .

    error  desplazar e ir al estado 83
    COMA   desplazar e ir al estado 84

    PUNTOYCOMA  reduce usando la regla 19 (lista_variables)


Estado 47

   22 declar_matriz: CORIZQ CONSTENTERA . CORDER
   23              | CORIZQ CONSTENTERA . COMA CONSTENTERA CORDER

    CORDER  desplazar e ir al estado 85
    COMA    desplazar e ir al estado 86


Estado 48

   44 si: SI PARIZQ . expresion PARDER sentencia SINO sentencia
   45   | SI PARIZQ . expresion PARDER sentencia

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 87
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 49

   46 mientras: MIENTRAS PARIZQ . expresion PARDER sentencia

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 88
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 50

   47 entrada: LEER lista_variables .

    $default  reduce usando la regla 47 (entrada)


Estado 51

   62 expresion: error .

    $default  reduce usando la regla 62 (expresion)


Estado 52

   53 expresion: SUMRES . expresion

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 89
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 53

   52 expresion: OPUNARIO . expresion

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 90
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 54

   70 constante: CONSTENTERA .

    $default  reduce usando la regla 70 (constante)


Estado 55

   72 constante: CONSTLOGICA .

    $default  reduce usando la regla 72 (constante)


Estado 56

   73 constante: CONSTREAL .

    $default  reduce usando la regla 73 (constante)


Estado 57

   74 constante: CONSTCARACTER .

    $default  reduce usando la regla 74 (constante)


Estado 58

   69 exp_cad: CONSTCADENA .

    $default  reduce usando la regla 69 (exp_cad)


Estado 59

   51 expresion: PARIZQ . expresion PARDER

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 91
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 60

   77 constante_matriz: INICIOBLOQUE . auxiliar_matriz FINBLOQUE

    CONSTENTERA    desplazar e ir al estado 92
    CONSTLOGICA    desplazar e ir al estado 93
    CONSTREAL      desplazar e ir al estado 94
    CONSTCARACTER  desplazar e ir al estado 95

    auxiliar_matriz         ir al estado 96
    agregado_entero         ir al estado 97
    fila_agregado_entero    ir al estado 98
    lista_entera            ir al estado 99
    agregado_real           ir al estado 100
    fila_agregado_real      ir al estado 101
    lista_real              ir al estado 102
    agregado_logico         ir al estado 103
    fila_agregado_logico    ir al estado 104
    lista_logica            ir al estado 105
    agregado_caracter       ir al estado 106
    fila_agregado_caracter  ir al estado 107
    lista_caracter          ir al estado 108


Estado 61

   20 variable: IDENT . declar_matriz
   21         | IDENT .
   75 llamada_funcion: IDENT . PARIZQ lista_expresiones PARDER
   76                | IDENT . PARIZQ PARDER

    CORIZQ  desplazar e ir al estado 23
    PARIZQ  desplazar e ir al estado 109

    $default  reduce usando la regla 21 (variable)

    declar_matriz  ir al estado 71


Estado 62

   59 expresion: variable .

    $default  reduce usando la regla 59 (expresion)


Estado 63

   54 expresion: expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion
   68 exp_cad: expresion .

    OPOR          desplazar e ir al estado 110
    OPAND         desplazar e ir al estado 111
    OPRELACIONAL  desplazar e ir al estado 112
    SUMRES        desplazar e ir al estado 113
    OPBINARIO     desplazar e ir al estado 114

    $default  reduce usando la regla 68 (exp_cad)


Estado 64

   48 salida: ESCRIBIR lista_expresiones_cad .

    $default  reduce usando la regla 48 (salida)


Estado 65

   66 lista_expresiones_cad: exp_cad . COMA lista_expresiones_cad
   67                      | exp_cad .

    COMA  desplazar e ir al estado 115

    $default  reduce usando la regla 67 (lista_expresiones_cad)


Estado 66

   60 expresion: constante .

    $default  reduce usando la regla 60 (expresion)


Estado 67

   61 expresion: llamada_funcion .

    $default  reduce usando la regla 61 (expresion)


Estado 68

   71 constante: constante_matriz .

    $default  reduce usando la regla 71 (constante)


Estado 69

   49 devolver: DEVOLVER expresion .
   54 expresion: expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion

    OPOR          desplazar e ir al estado 110
    OPAND         desplazar e ir al estado 111
    OPRELACIONAL  desplazar e ir al estado 112
    SUMRES        desplazar e ir al estado 113
    OPBINARIO     desplazar e ir al estado 114

    $default  reduce usando la regla 49 (devolver)


Estado 70

   50 repetir_hasta: REPETIR sentencia . HASTA PARIZQ expresion PARDER

    HASTA  desplazar e ir al estado 116


Estado 71

   20 variable: IDENT declar_matriz .

    $default  reduce usando la regla 20 (variable)


Estado 72

   43 asignacion: variable ASIGNACION . expresion

    error          desplazar e ir al estado 51
    SUMRES         desplazar e ir al estado 52
    OPUNARIO       desplazar e ir al estado 53
    CONSTENTERA    desplazar e ir al estado 54
    CONSTLOGICA    desplazar e ir al estado 55
    CONSTREAL      desplazar e ir al estado 56
    CONSTCARACTER  desplazar e ir al estado 57
    PARIZQ         desplazar e ir al estado 59
    INICIOBLOQUE   desplazar e ir al estado 60
    IDENT          desplazar e ir al estado 61

    variable          ir al estado 62
    expresion         ir al estado 117
    constante         ir al estado 66
    llamada_funcion   ir al estado 67
    constante_matriz  ir al estado 68


Estado 73

    4 bloque: INICIOBLOQUE $@1 declar_variables_locales declar_subprogs $@2 sentencias FINBLOQUE .

    $default  reduce usando la regla 4 (bloque)


Estado 74

   33 sentencias: sentencia sentencias .

    $default  reduce usando la regla 33 (sentencias)


Estado 75

   36 sentencia: asignacion PUNTOYCOMA .

    $default  reduce usando la regla 36 (sentencia)


Estado 76

   39 sentencia: entrada PUNTOYCOMA .

    $default  reduce usando la regla 39 (sentencia)


Estado 77

   40 sentencia: salida PUNTOYCOMA .

    $default  reduce usando la regla 40 (sentencia)


Estado 78

   41 sentencia: devolver PUNTOYCOMA .

    $default  reduce usando la regla 41 (sentencia)


Estado 79

   42 sentencia: repetir_hasta PUNTOYCOMA .

    $default  reduce usando la regla 42 (sentencia)


Estado 80

    8 declar_subprog: cabecera_subprograma $@3 bloque .

    $default  reduce usando la regla 8 (declar_subprog)


Estado 81

   25 cabecera_subprograma: tipo_retorno IDENT $@6 . PARIZQ lista_parametros PARDER

    PARIZQ  desplazar e ir al estado 118


Estado 82

   15 cuerpo_declar_variables: TIPOBASICO $@5 lista_variables PUNTOYCOMA .

    $default  reduce usando la regla 15 (cuerpo_declar_variables)


Estado 83

   18 lista_variables: variable error . lista_variables

    IDENT  desplazar e ir al estado 31

    lista_variables  ir al estado 119
    variable         ir al estado 46


Estado 84

   17 lista_variables: variable COMA . lista_variables

    IDENT  desplazar e ir al estado 31

    lista_variables  ir al estado 120
    variable         ir al estado 46


Estado 85

   22 declar_matriz: CORIZQ CONSTENTERA CORDER .

    $default  reduce usando la regla 22 (declar_matriz)


Estado 86

   23 declar_matriz: CORIZQ CONSTENTERA COMA . CONSTENTERA CORDER

    CONSTENTERA  desplazar e ir al estado 121


Estado 87

   44 si: SI PARIZQ expresion . PARDER sentencia SINO sentencia
   45   | SI PARIZQ expresion . PARDER sentencia
   54 expresion: expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion

    OPOR          desplazar e ir al estado 110
    OPAND         desplazar e ir al estado 111
    OPRELACIONAL  desplazar e ir al estado 112
    SUMRES        desplazar e ir al estado 113
    OPBINARIO     desplazar e ir al estado 114
    PARDER        desplazar e ir al estado 122


Estado 88

   46 mientras: MIENTRAS PARIZQ expresion . PARDER sentencia
   54 expresion: expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion

    OPOR          desplazar e ir al estado 110
    OPAND         desplazar e ir al estado 111
    OPRELACIONAL  desplazar e ir al estado 112
    SUMRES        desplazar e ir al estado 113
    OPBINARIO     desplazar e ir al estado 114
    PARDER        desplazar e ir al estado 123


Estado 89

   53 expresion: SUMRES expresion .
   54          | expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion

    $default  reduce usando la regla 53 (expresion)


Estado 90

   52 expresion: OPUNARIO expresion .
   54          | expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion

    $default  reduce usando la regla 52 (expresion)


Estado 91

   51 expresion: PARIZQ expresion . PARDER
   54          | expresion . OPBINARIO expresion
   55          | expresion . OPOR expresion
   56          | expresion . OPRELACIONAL expresion
   57          | expresion . SUMRES expresion
   58          | expresion . OPAND expresion

    OPOR          desplazar e ir al estado 110
    OPAND         desplazar e ir al estado 111
    OPRELACIONAL  desplazar e ir al estado 112
    SUMRES        desplazar e ir al estado 113
    OPBINARIO     desplazar e ir al estado 114
    PARDER        desplazar e ir al estado 124


Estado 92

   86 lista_entera: CONSTENTERA .

    $default  reduce usando la regla 86 (lista_entera)


Estado 93

   96 lista_logica: CONSTLOGICA .
